--- a/build.gradle
+++ b/build.gradle
@@ -41,16 +41,16 @@ dependencies {
     implementation 'org.apache.httpcomponents:httpclient:4.5.13'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.0'
-    implementation 'commons-io:commons-io:20030203.000550'
+    implementation 'commons-io:commons-io:2.11.0'
 
     api 'io.apimap.api:rest-interface:2.0-SNAPSHOT'
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
-    testImplementation 'org.mockito:mockito-junit-jupiter:4.0.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:4.1.0'
     testImplementation 'org.mockito:mockito-core:4.0.0'
 
     integrationTestImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
-    integrationTestImplementation 'org.mockito:mockito-junit-jupiter:4.0.0'
+    integrationTestImplementation 'org.mockito:mockito-junit-jupiter:4.1.0'
     integrationTestImplementation 'org.mockito:mockito-core:4.0.0'
 }
 
