--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -4,6 +4,9 @@ on:
     branches:
       - main
       - 'feature/**'
+- pull_request:
+    branches:
+      - main
   workflow_dispatch:
 jobs:
   analyze:
@@ -24,7 +27,7 @@ jobs:
         uses: github/codeql-action/init@v1
         with:
           languages: ${{ matrix.language }}
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v1
+      - name: Build
+        run: ./gradlew build
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v1
