Testing with build manually approach

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -2,8 +2,9 @@ name: "Code Analysis"
 on:
   push:
     branches:
+      - main
       - 'feature/**'
-- pull_request:
+  pull_request:
     branches:
       - main
   workflow_dispatch:
