--- a/build.gradle
+++ b/build.gradle
@@ -39,11 +39,11 @@ configurations {
 
 dependencies {
     implementation 'org.apache.httpcomponents:httpclient:4.5.13'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2.2'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.2.2'
     implementation 'commons-io:commons-io:2.11.0'
 
-    api 'io.apimap.api:rest-interface:2.0-SNAPSHOT'
+    api 'io.apimap.api:rest-interface:2.1.3'
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     testImplementation 'org.mockito:mockito-junit-jupiter:4.1.0'
