--- a/.github/workflows/buildandpublish.yaml
+++ b/.github/workflows/buildandpublish.yaml
@@ -3,27 +3,36 @@ on:
   push:
     branches:
       - main
-      - 'feature/**'
-  pull_request:
-    branches:
-      - main
   workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 11
+        with:
+          fetch-depth: 0
+      - name: Set up JDK 16
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
-          distribution: 'adopt'
+          java-version: '16'
+          distribution: 'zulu'
+          cache: 'gradle'
       - name: Build
         run: ./gradlew build
         env:
           MULTI_PACKAGES_TOKEN: ${{ secrets.MULTI_PACKAGES_TOKEN }}
           MULTI_PACKAGES_USER: ${{ secrets.MULTI_PACKAGES_USER }}
+      - name: Release
+        run: gradle release --no-daemon -Dorg.ajoberstar.grgit.auth.username='$GITHUB_ACTOR' -Dorg.ajoberstar.grgit.auth.password='${{ secrets.GITHUB_TOKEN }}'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          MULTI_PACKAGES_TOKEN: ${{ secrets.MULTI_PACKAGES_TOKEN }}
+          MULTI_PACKAGES_USER: ${{ secrets.MULTI_PACKAGES_USER }}
+      - name: Read release tag
+        id: read_tag
+        run: echo "::set-output name=release_tag::$(git tag --points-at HEAD 'v[0-9]*' | head -n1)"
       - name: Publish
+        if: ${{ steps.read_tag.outputs.release_tag != '' }}
         run: ./gradlew publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
