--- a/build.gradle
+++ b/build.gradle
@@ -48,20 +48,19 @@ configurations {
 }
 
 dependencies {
-    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.2'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.3'
     implementation 'commons-io:commons-io:2.11.0'
+    implementation "org.apache.httpcomponents.client5:httpclient5:5.1.3"
+    implementation 'io.apimap.api:rest-interface:2.1.3'
 
-    api 'io.apimap.api:rest-interface:2.1.3'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:4.6.1'
+    testImplementation 'org.mockito:mockito-core:4.6.1'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
-    testImplementation 'org.mockito:mockito-junit-jupiter:4.1.0'
-    testImplementation 'org.mockito:mockito-core:4.0.0'
-
-    integrationTestImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
-    integrationTestImplementation 'org.mockito:mockito-junit-jupiter:4.1.0'
-    integrationTestImplementation 'org.mockito:mockito-core:4.0.0'
+    integrationTestImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+    integrationTestImplementation 'org.mockito:mockito-junit-jupiter:4.6.1'
+    integrationTestImplementation 'org.mockito:mockito-core:4.6.1'
 }
 
 publishing {
