--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java-library'
     id 'maven-publish'
     id 'de.gliderpilot.semantic-release' version '1.4.2'
+    id "com.github.spotbugs" version "5.0.9"
 }
 
 group 'io.apimap.client'
@@ -48,20 +49,21 @@ configurations {
 }
 
 dependencies {
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.3'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.2'
     implementation 'commons-io:commons-io:2.11.0'
 
-    api "org.apache.httpcomponents.client5:httpclient5:5.1.3"
-    api 'io.apimap.api:rest-interface:2.1.3'
+    api "org.apache.httpcomponents.client5:httpclient5:5.2.1"
+    implementation 'com.github.spotbugs:spotbugs-annotations:4.7.3'
+    implementation 'io.apimap.api:rest-interface:2.3.0'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
-    testImplementation 'org.mockito:mockito-junit-jupiter:4.6.1'
-    testImplementation 'org.mockito:mockito-core:4.6.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
+    testImplementation 'org.mockito:mockito-core:5.2.0'
 
-    integrationTestImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
-    integrationTestImplementation 'org.mockito:mockito-junit-jupiter:4.6.1'
-    integrationTestImplementation 'org.mockito:mockito-core:4.6.1'
+    integrationTestImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
+    integrationTestImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
+    integrationTestImplementation 'org.mockito:mockito-core:5.2.0'
 }
 
 publishing {
